--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,13 @@
     <string name="screen_catalog">Каталог</string>
     <string name="screen_bookmarks">Моё</string>
     <string name="screen_profile">Аккаунт</string>
-    <string name="screen_detail">Аккаунт</string>
+    <string name="screen_detail">Детальное</string>
+    <string name="screen_sing_up">Регистрация</string>
+    <string name="screen_login">Вход</string>
     <string name="screen_home_recommendations_section">Рекомендуемые</string>
     <string name="error_message">Произошла ошибка!</string>
+    <string name="congrats">Поздравляем!</string>
+    <string name="sign_up_success_message">Регистрация прошла успешно!</string>
     <string name="retry_icon_content_description">Попробовать снова</string>
     <string name="search_icon_content_description">Иконка поиска</string>
     <string name="clear_icon_content_description">Кнопка для очистки теста из строки поиска</string>
@@ -20,4 +24,24 @@
     <string name="comics_catalog">Комиксы</string>
     <string name="button_read">Читать</string>
     <string name="button_chapters">Главы</string>
+    <string name="username_hint">Имя пользователя</string>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Пароль</string>
+    <string name="confirm_password_hint">Подтвердить пароль</string>
+    <string name="sign_up_text">Зарегистрироваться</string>
+    <string name="already_have_an_account">Уже есть аккаунт?</string>
+    <string name="empty_text_field_error">Заполните поле</string>
+    <string name="passwords_not_equals_text_field_error">Пороли не совпадают</string>
+    <string name="until_resending_confirmation_email">Отправить сообщение с подтвержение повторно можно через: %1$s</string>
+    <string name="confirmation_email_sent">Письмо с подтверждением было отправлено на вашу электронную почту</string>
+    <string name="resend_confirmation_email">Отправить ещё раз</string>
+    <string name="check_is_email_confirmed">Проверить</string>
+    <string name="email_not_confirmed">Электронная почта не подтверждена!</string>
+    <string name="go_to_profile_screen">Перейти в профиль</string>
+    <string name="auth_invalid_user_exception_message">Пользователя с таким адресом электронной почты уже соуществует!</string>
+    <string name="network_exception_message">Нет подключения к сети</string>
+    <string name="too_many_requests_exception_message">Слишком много неудачных попыток. Поробуйте позже.</string>
+    <string name="auth_user_collision_exception_message">Такой адрес электронной почты уже существует</string>
+    <string name="auth_weak_password_exception_message">Слабый пароль. Пожалуйста, используйте более сложный пароль</string>
+    <string name="auth_invalid_credentials_exception_message">Недопустимый адрес электронной почты или пароль</string>
 </resources>
